name:                tomlcheck
version:             0.1.0.0
synopsis:            Command-line tool to check syntax of TOML files
description:         This is a command-line wrapper around htoml-megaparsec.
                     It is intended to be used as a syntax checker that can be
                     called by your text editor.
homepage:            https://github.com/vmchale/tomlcheck#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vanessa.mchale@reconfigure.io
copyright:           Copyright: (c) 2017 Vanessa McHale
category:            Toml, Data
build-type:          Simple
extra-source-files:  cabal.project.local
                   , stack.yaml
cabal-version:       >=1.18
Data-files:          .travis.yml
Extra-doc-files:     README.md

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.8 && < 5
                     , htoml-megaparsec >= 1.0.1.0
                     , optparse-generic
                     , megaparsec >= 6.0
                     , text
  default-language:    Haskell2010
  if flag(development) && impl(ghc >= 8.0)
    ghc-options: -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
  ghc-options:         -Wall

executable tomlcheck
  hs-source-dirs:      app
  main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tomlcheck
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/vmchale/tomlcheck
