cabal-version: 1.18
name: tomlcheck
version: 0.1.0.36
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2017-2018 Vanessa McHale
maintainer: vamchale@gmail.com
author: Vanessa McHale
synopsis: Command-line tool to check syntax of TOML files
description:
    This is a command-line wrapper around htoml-megaparsec.
    It is intended to be used as a syntax checker that can be
    called by your text editor.
category: Toml, Data
build-type: Simple
extra-source-files:
    cabal.project.local
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/vmchale/tomlcheck

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

executable tomlcheck
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    other-extensions: DataKinds DeriveGeneric OverloadedStrings
                      TypeOperators
    ghc-options: -Wall
    build-depends:
        base >=4.9 && <5,
        htoml-megaparsec >=2.1.0.0,
        optparse-generic -any,
        megaparsec >=7.0,
        text -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
